Revert "Don't compress or digestify assets"
Alas, that didn't work; while it did the right thing with the
stylesheets, it caused Heroku to choke on the images.

This reverts commit 4d08c1cd53d000a95348b0d56bf28461acd11062.

--- a/public/assets/manifest.yml
+++ b/public/assets/manifest.yml
@@ -1,18 +1,18 @@
 ---
-gardener.eot: gardener.eot
-gardener.svg: gardener.svg
-gardener.ttf: gardener.ttf
-gardener.woff: gardener.woff
-cross.png: cross.png
-disc-blue.png: disc-blue.png
-lightning.png: lightning.png
-rails.png: rails.png
-scenery-sa17d819466.png: scenery-sa17d819466.png
-scenery/scenery.png: scenery/scenery.png
-scenery/scenery_hover.png: scenery/scenery_hover.png
-smiley.png: smiley.png
-application.js: application.js
-home.css: home.css
-ie.css: ie.css
-print.css: print.css
-screen.css: screen.css
+gardener.eot: gardener-2ad6d2c5ad4b25b2c4322cbf452d7d59.eot
+gardener.svg: gardener-09ac413a57a48e47f52d3ddcceb2366a.svg
+gardener.ttf: gardener-1929316f96bcad49d924c4c4b06949e2.ttf
+gardener.woff: gardener-80ee81e28b1e891bb74caaa81005f42d.woff
+cross.png: cross-7d4fbf62e67570f0dded67df03bf7b68.png
+disc-blue.png: disc-blue-9852aca201ca5b5f33f784e69abd406d.png
+lightning.png: lightning-73cd7d43f462c7f83ae9cd4f4b45c608.png
+rails.png: rails-be8732dac73d845ac5b142c8fb5f9fb0.png
+scenery-sa17d819466.png: scenery-sa17d819466-d962353acf993b4130924d343858c110.png
+scenery/scenery.png: scenery/scenery-1626921d933da6a883a03c8e7201a198.png
+scenery/scenery_hover.png: scenery/scenery_hover-2264c74afeae99896918f8f9507dfe2b.png
+smiley.png: smiley-c2fb010bbf52c407b518ed8a828aa66f.png
+application.js: application-04cb640a6e0350c487bddfc4498bfac0.js
+home.css: home-ba14d3d11e33aaf259501013d319c331.css
+ie.css: ie-7270767b2a9e9fff880aa5de378ca791.css
+print.css: print-7270767b2a9e9fff880aa5de378ca791.css
+screen.css: screen-ac2a4b84d82039b64b1f3b736d39c439.css
